--- a/style.css
+++ b/style.css
@@ -2308,7 +2308,7 @@ a.phone-button:focus,
     grid-column: auto;
     grid-row: auto;
     order: 1;
-    margin-bottom: 16px;
+    margin-bottom: 0;
   }
 }
 
